--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
 # Byte-compiled / optimized / DLL files
+
+
 __pycache__/
 *.py[cod]
 *$py.class
+
+#Adding Config.py file 
+api_keys.py
 
 # C extensions
 *.so
